Refactoring this to use MVC also.